fix to icon mobile

--- a/src/css/stylus/components/popovers/popup-right-tablet.styl
+++ b/src/css/stylus/components/popovers/popup-right-tablet.styl
@@ -14,6 +14,10 @@
         // background red
         // border-top-left-radius 50%
         // border-bottom-left-radius 50%
+        &.mobile
+            transform  rotate(45deg)
+            i
+                color red
 
         i
             font-size 30px
@@ -61,6 +65,8 @@
             background red
             border-top-left-radius 50%
             border-bottom-left-radius 50%
+            &.mobile
+                display none
 
             i
                 font-size 30px
